==> RobertPHeller/ESP32-LCC/T7S3-MiniDisplay/firmware/components/SSD1306/Adafruit_SSD1306.cpp <==
#include "Adafruit_SSD1306.h"
#include <Adafruit_GFX.h>
#include <fcntl.h>
#include <unistd.h>
#include "stropts.h"
#include "i2c.h"
#include "i2c-dev.h"
#include "utils/macros.h"
#define WIRE_MAX 256 // guess?
#define ssd1306_swap(a, b)                                                     \
  (((a) ^= (b)), ((b) ^= (a)), ((a) ^= (b))) ///< No-temp-var swap operation
#define pgm_read_byte(addr) (*(const unsigned char *)(addr))
#define pgm_read_word(addr) (*(const unsigned short *)(addr))
#define pgm_read_dword(addr) (*(const unsigned long *)(addr))
#define pgm_read_pointer(addr) ((void *)pgm_read_dword(addr))

void Adafruit_SSD1306::ssd1306_commandList(const uint8_t *c, uint8_t n) {
    uint8_t buff[WIRE_MAX];
    buff[0] = 0x00;
    int i = 1;
    while (n--) {
        if (i >= WIRE_MAX)
        {
            ::write(i2cfd_,buff,i);
            buff[0] = 0x00;
            i = 1;
        }
        buff[i++] = pgm_read_byte(c++);
    }
    if (i > 1) ::write(i2cfd_,buff,i);
}

bool Adafruit_SSD1306::begin(const char *i2cpath, uint8_t vcs, uint8_t addr, 
                             bool reset, bool periphBegin) {

  i2cfd_ = ::open(i2cpath, O_RDWR);
  HASSERT(i2cfd_ >= 0);
  ::ioctl(i2cfd_, I2C_SLAVE, addr);
    
  if ((!buffer) && !(buffer = (uint8_t *)malloc(WIDTH * ((HEIGHT + 7) / 8))))
    return false;

  clearDisplay();

  vccstate = vcs;
    
    
  // Init sequence
  static const uint8_t init1[] = {SSD1306_DISPLAYOFF,         // 0xAE
                                          SSD1306_SETDISPLAYCLOCKDIV, // 0xD5
                                          0x80, // the suggested ratio 0x80
                                          SSD1306_SETMULTIPLEX}; // 0xA8
  ssd1306_commandList(init1, sizeof(init1));
  ssd1306_command1(HEIGHT - 1);

  static const uint8_t init2[] = {SSD1306_SETDISPLAYOFFSET, // 0xD3
                                          0x0,                      // no offset
                                          SSD1306_SETSTARTLINE | 0x0, // line #0
                                          SSD1306_CHARGEPUMP};        // 0x8D
  ssd1306_commandList(init2, sizeof(init2));

  ssd1306_command1((vccstate == SSD1306_EXTERNALVCC) ? 0x10 : 0x14);

  static const uint8_t init3[] = {SSD1306_MEMORYMODE, // 0x20
                                          0x00, // 0x0 act like ks0108
                                          SSD1306_SEGREMAP | 0x1,
                                          SSD1306_COMSCANDEC};
  ssd1306_commandList(init3, sizeof(init3));

  uint8_t comPins = 0x02;
  contrast = 0x8F;

  if ((WIDTH == 128) && (HEIGHT == 32)) {
    comPins = 0x02;
    contrast = 0x8F;
  } else if ((WIDTH == 128) && (HEIGHT == 64)) {
    comPins = 0x12;
    contrast = (vccstate == SSD1306_EXTERNALVCC) ? 0x9F : 0xCF;
  } else if ((WIDTH == 96) && (HEIGHT == 16)) {
    comPins = 0x2; // ada x12
    contrast = (vccstate == SSD1306_EXTERNALVCC) ? 0x10 : 0xAF;
  } else {
    // Other screen varieties -- TBD
  }

  ssd1306_command1(SSD1306_SETCOMPINS);
  ssd1306_command1(comPins);
  ssd1306_command1(SSD1306_SETCONTRAST);
  ssd1306_command1(contrast);

  ssd1306_command1(SSD1306_SETPRECHARGE); // 0xd9
  ssd1306_command1((vccstate == SSD1306_EXTERNALVCC) ? 0x22 : 0xF1);
  static const uint8_t init5[] = {
      SSD1306_SETVCOMDETECT, // 0xDB
      0x40,
      SSD1306_DISPLAYALLON_RESUME, // 0xA4
      SSD1306_NORMALDISPLAY,       // 0xA6
      SSD1306_DEACTIVATE_SCROLL,
      SSD1306_DISPLAYON}; // Main screen turn on
  ssd1306_commandList(init5, sizeof(init5));

  return true; // Success
}

void Adafruit_SSD1306::display(void) {
  static const uint8_t dlist1[] = {
      SSD1306_PAGEADDR,
      0,                      // Page start address
      0xFF,                   // Page end (not really, but works here)
      SSD1306_COLUMNADDR, 0}; // Column start address
  ssd1306_commandList(dlist1, sizeof(dlist1));
  ssd1306_command1(WIDTH - 1); // Column end address

  uint16_t count = WIDTH * ((HEIGHT + 7) / 8);
  uint8_t *ptr = buffer;
  uint8_t buff[WIRE_MAX];
  buff[0] = (uint8_t)0x40;
  uint16_t bytesOut = 1;
  while (count--) 
  {
      if (bytesOut >= WIRE_MAX) {
          ::write(i2cfd_,buff,bytesOut);
          buff[0] = (uint8_t)0x40;
          bytesOut = 1;
      }
      buff[bytesOut] = *ptr++;
      bytesOut++;
  }
  if (bytesOut>1) ::write(i2cfd_,buff,bytesOut);
}
